RESOLVED FIXED250037
<button> and <select> elements with "readonly" attribute shouldn't be barred from constraint validation
https://bugs.webkit.org/show_bug.cgi?id=250037
Summary <button> and <select> elements with "readonly" attribute shouldn't be barred ...
Alexey Shvayka
Reported 2023-01-03 12:25:39 PST
Per spec, only <input>, <textarea>, and form-associated custom elements are barred from constraint validation if "readonly" attribute is present.
Attachments
Radar WebKit Bug Importer
Comment 1 2023-01-03 12:34:19 PST
Alexey Shvayka
Comment 2 2023-01-03 12:36:11 PST
EWS
Comment 3 2023-01-05 09:39:03 PST
Committed 258485@main (a4eb84de0c69): <https://commits.webkit.org/258485@main> Reviewed commits have been landed. Closing PR #8158 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.